[package]
name = "grafana"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6 ", features = ["cargo", "string"]}
color-eyre = "~0.6"
dirs-next = "~2.0.0"
regex = "~1.9.6"
serde = { version = "1.0.133", features = [ "derive"]}
serde_yaml = "0.9.25"
url = "2.4.1"
walkdir = "~2.4.0"

